--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # project specifc
 django_project/core/settings/secret.py
 xmlrunner
+*.gfs
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -54,9 +55,6 @@ coverage.xml
 
 # Sphinx documentation
 docs/_build/
-
-
-
 
 # Node
 django_project/static
