--- a/django_project/setup.cfg
+++ b/django_project/setup.cfg
@@ -1,3 +1,3 @@
 [flake8]
-exclude = */migrations/*,core/settings/secret.py
+exclude = */migrations/*,core/settings/secret.py,node_modules
 max-complexity = 10
