--- a/django_project/package.json
+++ b/django_project/package.json
@@ -2,18 +2,24 @@
   "name": "sunlumo",
   "version": "0.0.1",
   "description": "Sunlumo QGIS Server",
-  "main": "index.js",
   "dependencies": {
     "proj4": "^2.3.3"
   },
   "devDependencies": {
+    "chai": "^1.10.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.2.1",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-css": "^0.5.4"
+    "grunt-css": "^0.5.4",
+    "grunt-mocha-phantomjs": "^0.6.0",
+    "mocha": "^2.0.1",
+    "mocha-phantomjs": "^3.5.2",
+    "phantomjs": "^1.9.12",
+    "sinon": "^1.12.2",
+    "sinon-chai": "^2.6.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
