Initial JS sl_project handler and tests

--- a/django_project/package.json
+++ b/django_project/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Sunlumo QGIS Server",
   "dependencies": {
+    "lodash": "^2.4.1",
     "proj4": "^2.3.3"
   },
   "devDependencies": {
