--- a/django_project/package.json
+++ b/django_project/package.json
@@ -15,7 +15,9 @@
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-css": "^0.5.4",
+    "grunt-mocha-istanbul": "^2.2.0",
     "grunt-mocha-phantomjs": "^0.6.0",
+    "istanbul": "^0.3.5",
     "mocha": "^2.0.1",
     "mocha-phantomjs": "^3.5.2",
     "phantomjs": "^1.9.12",
