--- a/django_project/package.json
+++ b/django_project/package.json
@@ -17,11 +17,11 @@
     "grunt-contrib-compass": "^1.0.1",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-mocha-istanbul": "^2.2.0",
     "grunt-mocha-phantomjs": "^0.6.0",
+    "gruntify-eslint": "^0.1.0",
     "istanbul": "^0.3.5",
     "mocha": "^2.0.1",
     "mocha-phantomjs": "^3.5.2",
